spark/k8s/standalone-mode/spark-master.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-master
  namespace: lakehouse
  labels:
    app: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
        app: spark
    spec:
      containers:
        - name: spark-master
          image: spark-hadoop:3.2.0
          imagePullPolicy: IfNotPresent
          command: ["/spark-master"]
          ports:
            - containerPort: 7077
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m

---

kind: Service
apiVersion: v1
metadata:
  name: spark-master
  namespace: lakehouse
  labels:
    app: spark
spec:
  type: LoadBalancer
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      nodePort: 308080
    - name: spark
      port: 7077
      targetPort: 7077
      nodePort: 307077
  selector:
    component: spark-master
